--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.1.0",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
@@ -7,7 +8,6 @@
     "lint": "prettier --check \"src/**/*.js\""
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0",
     "dedent": "^0.7.0"
   },
   "devDependencies": {
