--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "slashdown",
   "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nickisnoble/slashdown.git"
+  },
+  "author": "Nick Noble",
+  "license": "MIT",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
