--- a/package.json
+++ b/package.json
@@ -6,5 +6,16 @@
     "url": "https://github.com/nickisnoble/slashdown.git"
   },
   "author": "Nick Noble",
-  "license": "MIT"
+  "license": "MIT",
+  "main": "src/index.js",
+  "files": ["dist", "src"],
+  "scripts": {
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
+    "build": "tsc --module commonjs",
+    "preversion": "npm run build"
+  },
+  "devDependencies": {
+    "typescript": "^5.1.6"
+  }
 }
