--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "slashdown",
-  "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
